--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -40,7 +40,7 @@ p{font-family: 'Kern-r', sans-serif; color: $sec-color; line-height: 135%;  text
     padding-top: 60px;
     display: grid;
     grid-template-columns: 20% 20% auto;
-    align-items: baseline;
+  //  align-items: baseline;
 
 }
 
