--- a/app/assets/stylesheets/mobile.scss
+++ b/app/assets/stylesheets/mobile.scss
@@ -105,7 +105,7 @@ ul {
   bottom: 80px;
   color: $sec-color;
   width: 70%;
-  font-size: .9em;
+  font-size: .8em;
   a{text-decoration: none; color: $sec-color}
   #heterodox-logo{width:50%; path{fill: $sec-color;}}
   #heterodox-text{margin-top: 5px;}
@@ -127,7 +127,7 @@ ul {
 
 .info-container-mobile{ width: 80%;
   margin-top: 20px;  font-size: 15px;
-  .header-a{color: $sec-color; font-size: 18px; margin-bottom: 0px;}
+  .header-a{font-family: 'Kern-b' ; color: $sec-color; font-size: 18px; margin-bottom: 0px;}
   p{ margin: 10px 0px;   a{ color: $main-color}
 }
 .contact{margin-top: 30px;}
