add spacer on mobile

--- a/app/assets/stylesheets/mobile.scss
+++ b/app/assets/stylesheets/mobile.scss
@@ -139,3 +139,11 @@ ul {
   svg{width: 20px;path{fill:$main-color; }}
 }
 ///// SWITTCH INVERSION ////
+
+
+//////spacer////
+
+.spacer{
+
+  margin-bottom: 200px;
+}
