--- a/app/views/static_pages/info.html+phone.erb
+++ b/app/views/static_pages/info.html+phone.erb
@@ -17,8 +17,9 @@
 
 
 <div class="references">
-<p class='header-a'>References</p>
+<p class='header-a'><%=t('ref') %></p>
 <% @references.each do |ref| %>
 <p class="inner-content-links"><%= link_to ref.refname , ref.reflink.html_safe , target:"_blank" %></p>
 <%end%>
 </div>
+<div class="spacer"></div>
