--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,7 +52,7 @@
     <%= yield %>
   </div>
 <footer>
-<p class="page-footer">&copy; designed &amp; developed by Labaki - 2020  </p>
+<p class="page-footer"><span>&copy; designed &amp; developed by Labaki - 2020</span>  </p>
 </footer>
   </body>
 
