--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -84,32 +84,20 @@ opacity: 0.4;
   &:hover{border: none;}
 }
 
-.page-footer{
+.page-footer , .page-footer-mobile{
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
    text-align: center;
-   font-size: 11px;
-   color: $sec-color;
-   margin: 0;
-   padding: 20px;
-   background-color: $body-color;
-   opacity: .5;
-}
-.page-footer-mobile{
-   position: fixed;
-   bottom: 0;
-   left: 0;
-   right: 0;
-   text-align: center;
-   font-size: 9.5px;
+   font-size: 10px;
    color: $sec-color;
    margin: 0;
    padding: 10px;
    background-color: $body-color;
-    opacity: .5;
+   span{opacity: 0.5;}
 }
+.page-footer-mobile{font-size: 9px;}
 ///////scrollTop
 //////INFO PAGE/////
 .about-text{
