--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -34,10 +34,10 @@ hr{ color: $main-color; margin-top:0px;}
   ///////HETERODOX EASTER EGG////////////
 
   .heterodox{
-    position: fixed;
-    bottom: 80px;
+//    position: fixed;
+  //  bottom: 80px;
     opacity: .1;
-    margin-top: 30px;
+    margin-top: 100px;
     color: $sec-color;
     width: 20%;
     font-size: .9em;
