--- a/app/views/static_pages/info.html+phone.erb
+++ b/app/views/static_pages/info.html+phone.erb
@@ -21,4 +21,6 @@
 <% @references.each do |ref| %>
 <p class="inner-content-links"><%= link_to ref.refname , ref.reflink.html_safe , target:"_blank" %></p>
 <%end%>
+<div class="spacer"></div>
+
 </div>
