--- a/app/assets/stylesheets/mobile.scss
+++ b/app/assets/stylesheets/mobile.scss
@@ -131,6 +131,7 @@ ul {
   p{ margin: 10px 0px;   a{ color: $main-color}
 }
 .contact, .references {margin-top: 40px;}
+.references{margin-bottom: 200px;}
 .inner-content-links{line-height: 110%}
 }
 ///////// SWITCH INVERSION /////
@@ -142,7 +143,3 @@ ul {
 
 
 //////spacer////
-
-.spacer{
-  margin-bottom: 100px;
-}
