--- a/app/views/static_pages/construction.html.erb
+++ b/app/views/static_pages/construction.html.erb
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="<%= t('desc') %> ">
 
-<%= favicon_link_tag asset_path('micro.png') %>
+<%= favicon_link_tag asset_path('labaki-fav-web.png') %>
 
 
 </head>
