Modify Social Links

--- a/app/views/static_pages/info.html+phone.erb
+++ b/app/views/static_pages/info.html+phone.erb
@@ -10,8 +10,8 @@
 
 <div class="contact">
   <p class='header-a'>Contact</p>
-  <p class="inner-content"> <%= t('reach-out') %>  <%=link_to 'Instagram' , 'https://www.instagram.com/labaki_design/' , target: "_blank" %>, <%= t('medium') %> <%= mail_to "contact@labaki.design" , "email," %>
-  <br> <%= t('byphone') %> <a href="tel:+961 70 047 045">+961 70 047 045</a>
+  <p class="inner-content"> <%= t('reach-out') %>  <%=link_to 'Instagram' , 'https://www.instagram.com/labaki_design/' , target: "_blank" %>, <%=link_to 'Twitter' , 'https://twitter.com/labaki_design' , target: "_blank" %>, <%=link_to 'Behance' , 'https://www.behance.net/labaki' , target: "_blank" %>, <%= t('medium') %> <%= mail_to "contact@labaki.design" , "email" %>
+  <%= t('byphone') %> <a href="tel:+961 70 047 045">   <%= t('device-call') %> </a>
   </p>
 </div>
 
