--- a/app/assets/stylesheets/mobile-project.scss
+++ b/app/assets/stylesheets/mobile-project.scss
@@ -11,6 +11,7 @@
   text-rendering: optimizeLegibility;
   margin: 0;
   width: 90%;
+
 }
 
 .show-project-body-mobile{
@@ -27,7 +28,7 @@
 img{width: 94%; padding-bottom: 20px;}
 }
 
-#subcat-mobile{font-family: 'Kern-r' , sans-serif;font-size: .9em; color: $sec-color;}
+#subcat-mobile{font-family: 'Kern-r' , sans-serif;font-size: .85em; color: $main-color;}
 
 .in-project-nav-mobile{
   display: grid;
