--- a/app/assets/stylesheets/mobile.scss
+++ b/app/assets/stylesheets/mobile.scss
@@ -89,6 +89,7 @@ ul {
   //border-bottom: 1px dotted $main-color;
   width: 95%;
   grid-template-columns: auto 1fr auto;
+  padding: 5px 0;
 }
 .project-title-mobile{
   justify-self:start;
@@ -96,7 +97,9 @@ ul {
   text-decoration: none;
   font-size: 1.7em;
   margin: 8px auto;
+  margin-bottom: 0px;
   color: $main-color;
+  line-height: 80%;
 }
 
 .heterodox-mobile{
