--- a/app/views/projects/index.html+phone.erb
+++ b/app/views/projects/index.html+phone.erb
@@ -2,9 +2,11 @@
 <% @projects.each do |p| %>
 
 <div class="single-project-mobile <%= p.title.parameterize%>">
-      <div class="project-info"><div class="project-title-mobile"> <%= p.title %></div></div>
+      <div class="project-info"><div class="project-title-mobile"> <%= p.title %></div><div id="subcat-mobile"><%= p.subcategory %></div></div>
       <div class="arrow-click invisible" id="<%=p.title.parameterize%>-arrow"> <%= link_to project_path(p) do%> <%= inline_svg 'arrow-click.svg'%> <%end%></div>
+
       <% p.thumbnails.each do |th| %><div style="top:<%= p.toposmobile %>px ; left:<%= p.leftposmobile%>px" class="thumbails-index-mobile invisible" id= "<%=p.code%>-thumb-mobile" ><%= image_tag (th.url)%></div><% end %>
+
 </div>
 
 <%end%>
