--- a/app/assets/stylesheets/mobile.scss
+++ b/app/assets/stylesheets/mobile.scss
@@ -114,7 +114,9 @@ ul {
   #heterodox-text{margin-top: 5px;}
   &:active{ opacity: 1;
   a{&:active{border-bottom: 2px solid $sec-color ; padding-bottom: 5px;}
-  }}}
+  }}
+display: none;
+}
 
 
   .heterodox-mobile-active{opacity: 1;}
