--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -46,7 +46,9 @@ hr{ color: $main-color; margin-top:0px;}
     #heterodox-text{margin-top: 5px;}
     &:hover{ opacity: 1;
     a{&:hover{border-bottom: 2px solid $sec-color ; padding-bottom: 5px;}
-    }}}
+    }}
+display: none;
+  }
 
 ////////////////////////////SHOW//////
 .show-project-title{
