--- a/app/assets/stylesheets/mobile.scss
+++ b/app/assets/stylesheets/mobile.scss
@@ -30,7 +30,8 @@ body{overflow-x: hidden;}
   }
 }
 
-#logo-mobile{padding: 1px 0; margin-left: 20px; width: 60px; .cls-1{fill:$sec-color}}
+#logo-mobile{padding: 1px 0; margin-left: 20px; width: 60px; .cls-1{fill:$sec-color}; margin-right: 150px;}
+
 .top{display: inline-flex; padding: 1px 0; align-items:center;}
 .inner-navigation{
   display: none;
@@ -141,9 +142,7 @@ display: none;
 }
 ///////// SWITCH INVERSION /////
 .toggle-container-mobile{
-  position: relative;
-  left: 180px;
-  cursor: pointer;
+
   svg{width: 20px;path{fill:$main-color; }}
 }
 ///// SWITTCH INVERSION ////
