--- a/app/assets/stylesheets/mobile.scss
+++ b/app/assets/stylesheets/mobile.scss
@@ -147,5 +147,6 @@ display: none;
 }
 ///// SWITTCH INVERSION ////
 
+#legende-mobile{font-family: 'Kern-i';margin-top: 0px;margin-bottom: 25px; color: $sec-color; font-size: .75em;}
 
 //////spacer////
