--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -13,6 +13,8 @@
   $body-color: whitesmoke;
   $sec-color: dimgray;
 
+@font-face{font-family: 'Kern-Regular';
+src: font-url('Kern-Regular.otf')}
 
   @font-face {
       font-family: 'Kern-r';
