--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -60,7 +60,7 @@ display: none;
 }
 
 .show-project-body{
-  font-family: 'Kern-r' , sans-serif;
+  font-family: 'Kern-Regular' , sans-serif;
   width: 50%;
   margin: 30px 0px;
   padding: 20px 0px;
