--- a/app/views/projects/show.html+phone.erb
+++ b/app/views/projects/show.html+phone.erb
@@ -11,7 +11,7 @@
 <div class="images-block-mobile ">
 <% @project.images.each do |i| %>
 <div><%= image_tag (i.url) , alt: i.file.filename.split('.')[0]%>
-  <p id="legende-mobile"><%= i.file.filename.split('.')[0] %></p>
+  <p id="legende-mobile"><%= i.file.filename.split('.')[0].gsub('_' , ' ') %></p>
 
 
 </div>
