--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -13,7 +13,7 @@
 <% @project.images.each do |i| %>
 <div><%= image_tag (i.url), alt: i.file.filename.split('.')[0] %>
 
-<p id="legende"><%= i.file.filename.split('.')[0] %></p>
+<p id="legende"><%= i.file.filename.split('.')[0].gsub('_' , ' ') %></p>
 </div>
 
 <% end %>
