--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,7 +20,7 @@ body{ margin: 0;padding: 0;
   scroll-behavior: smooth;}
 
 
-p{font-family: 'Kern-r', sans-serif; color: $sec-color; line-height: 135%;
+p{font-family: 'Kern-r', sans-serif; color: $sec-color; line-height: 135%; font-size: 17px;
 }
 
 .main-container{
