--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -27,8 +27,9 @@ a{ text-decoration: none;color: $main-color;
 
 
 .subcat{margin-left: 20px; font-family: 'Kern-r' , sans-serif;
-  font-size: 1em; color: $main-color;
-  text-rendering: optimizeLegibility;}
+  font-size: 17px; color: $main-color;
+  text-rendering: optimizeLegibility;
+}
 hr{ color: $main-color; margin-top:0px;}
 
   ///////HETERODOX EASTER EGG////////////
