--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -141,7 +141,7 @@ opacity: 0.4;
 .info-container{a{&:hover{color: $body-color}}}
 .show-project-body-mobile{border-bottom: 1px dotted $body-color;border-top: 1px dotted $body-color;}
 #legende , #legende-mobile{color: $body-color;}
-
+#subcat-mobile-index{color: $body-color}
 
 
   }
