--- a/app/assets/stylesheets/mobile.scss
+++ b/app/assets/stylesheets/mobile.scss
@@ -40,7 +40,7 @@ body{overflow-x: hidden;}
   font-family: 'Kern-r', sans-serif;
   color: $main-color;
   text-transform: uppercase;
-  font-size: 1em;
+  font-size: 1.5em;
   a{text-decoration: none; color: $main-color;}
    line-height: 30px;
    padding: 10px;
@@ -49,7 +49,8 @@ body{overflow-x: hidden;}
    top:64px;
    left: 10px;
    box-sizing:content-box;
-   width: 150px;
+   width: 300px;
+   height: 500px;
 }
 .all-links{
   margin-right: 40px;
@@ -76,7 +77,7 @@ ul {
 .inner-projects{
   display: none;
   border-bottom: 0px;
-  font-size: .9em;
+  font-size: .8em;
   line-height: 25px;
   padding: 1px 0;
   &:first-child{
