--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -115,4 +115,4 @@ display: none;
 #arrow-inner-next{padding-left: 30px; fill: $main-color;display:flex; align-self: center;}
 /////////////////
 
-#legende{font-family: 'Kern-i';margin-top: 0px;margin-bottom: 30px; color: $sec-color;}
+#legende{font-family: 'Kern-r';margin-top: 0px;margin-bottom: 30px; color: $sec-color; font-size: 0.8em}
