New project changes color

--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -12,6 +12,7 @@
   $main-color: tan;
   $body-color: whitesmoke;
   $sec-color: dimgray;
+  $new-project: darkcyan;
 
 @font-face{font-family: 'Kern-Regular';
 src: font-url('Kern-Regular.otf')}
