--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -98,3 +98,13 @@ hr{ color: $main-color; margin-top:0px;}
 /////////////////
 
 #legende{font-family: 'Kern-r';margin-top: 0px;margin-bottom: 30px; color: $sec-color; font-size: 0.8em}
+
+.nouveau { 
+
+a{ text-decoration: none;color: $new-project;
+
+&:hover{ color: $body-color; -webkit-text-stroke: 1px $new-project;     -webkit-font-smoothing: antialiased;}}
+
+}
+
+
