--- a/app/views/projects/index.html+phone.erb
+++ b/app/views/projects/index.html+phone.erb
@@ -1,7 +1,15 @@
 <% provide(:title, t('home')) %>
 <% @projects.each do |p| %>
 
-<div class="single-project-mobile <%= p.title.parameterize%>">
+<%if p.nouveau?%> <div class="single-project <%= p.title.parameterize%> nouveau">
+<%else%>
+<div class="single-project <%= p.title.parameterize%>">
+<%end%>
+
+
+
+
+
       <div class="project-info"><div class="project-title-mobile"> <%= p.title %></div><div id="subcat-mobile-index"><%= p.subcategory %></div></div>
       <div class="arrow-click invisible" id="<%=p.title.parameterize%>-arrow"> <%= link_to project_path(p) do%> <%= inline_svg 'arrow-click.svg'%> <%end%></div>
       <%= link_to project_path(p) do%>
