--- a/app/assets/stylesheets/mobile.scss
+++ b/app/assets/stylesheets/mobile.scss
@@ -104,21 +104,6 @@ ul {
   line-height: 80%;
 }
 
-.heterodox-mobile{
-  position: fixed;
-  opacity: .1;
-  bottom: 80px;
-  color: $sec-color;
-  width: 70%;
-  font-size: .8em;
-  a{text-decoration: none; color: $sec-color}
-  #heterodox-logo{width:50%; path{fill: $sec-color;}}
-  #heterodox-text{margin-top: 5px;}
-  &:active{ opacity: 1;
-  a{&:active{border-bottom: 2px solid $sec-color ; padding-bottom: 5px;}
-  }}
-display: none;
-}
 
 
   .subcat-mobile{margin-left: 10px; font-family: 'Kern-r' , sans-serif; font-size: .8em; color: $main-color; align-items: baseline; text-transform: capitalize;}
@@ -150,3 +135,12 @@ display: none;
 #legende-mobile{font-family: 'Kern-r';margin-top: 0px;margin-bottom: 25px; color: $sec-color; font-size: .7em;}
 
 //////spacer////
+
+.nouveau-mobile { 
+
+.project-title-mobile{ 
+color: $new-project;}
+
+
+}
+
