--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -143,6 +143,7 @@ opacity: 0.4;
 #subcat-mobile-index{color: $body-color}
 
 .nouveau-mobile { 
+  padding: 10px 0;
 
 .project-title-mobile , #subcat-mobile-index{ 
 color: $new-project;}}
