--- a/app/assets/stylesheets/mobile.scss
+++ b/app/assets/stylesheets/mobile.scss
@@ -138,6 +138,7 @@ ul {
 //////spacer////
 
 .nouveau-mobile { 
+  padding: 10px 0;
 
 .project-title-mobile , #subcat-mobile-index{ 
 color: $new-project;}
