--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,6 +48,8 @@
 
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
+<div class="footer-desk">Footer</div>
+
 
     <%= yield %>
 
