--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -99,7 +99,7 @@ hr{ color: $main-color; margin-top:0px;}
 
 #legende{font-family: 'Kern-r';margin-top: 0px;margin-bottom: 30px; color: $sec-color; font-size: 0.8em}
 
-.nouveau { 
+.nouveau {
 
 a{ text-decoration: none;color: $new-project;
 
@@ -109,4 +109,48 @@ a{ text-decoration: none;color: $new-project;
 
 }
 
+////////
+.footer-desk{
+  border-top: 1px solid $main-color;
+  padding-top: 20px;
+  position: fixed;
+  bottom:0;
+  width: 1200px;
+  margin-bottom: 80px;
+  height: 100px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+  color: $sec-color;
+  font-family: 'Kern-r' , sans-serif;
 
+.logo-footer{width: 25% ; .cls-1{fill:$sec-color;}}
+.copyright{font-size: 0.8em; }
+.contacts {a {text-decoration: none; color : $sec-color}}
+.newsletter{justify-self: end;}
+}
+
+#mc_embed_signup_scroll{
+  display: inline-flex;
+  align-items: baseline;
+}
+#mce-EMAIL {
+border: none;
+background: none;
+margin: 20px 0;
+color: $sec-color;
+font-family: 'Kern-r' , sans-serif;
+border-bottom: 1px solid $main-color;
+width: 300px;
+}
+
+.submit-btn{
+input{
+
+border: none;
+text-decoration:none;
+padding: 0;
+color: $main-color;
+font-family: 'Kern-r' , sans-serif;
+font-size: 20px;
+}}
