--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -127,5 +127,15 @@ a{ text-decoration: none;color: $new-project;
 .logo-footer{width: 25% ; .cls-1{fill:$sec-color;}}
 .copyright{font-size: 0.8em; }
 .contacts {a {text-decoration: none; color : $sec-color}}
-.newsletter{}
+.newsletter{ justify-self:end;
+#email-field{
+  font-family: 'Kern-r' , sans-serif;
+  margin-top: 10px;
+  font-size:.9em;
+  border:none; color: $sec-color; background: none; border-bottom: 1px solid $main-color; padding-bottom: 5px;}
+}
+#submit_btn{width: 150px; border:none; background: none; border:1px solid $main-color; padding:9px; margin-left: 15px;  font-family: 'Kern-r' , sans-serif;
+ font-size:.9em;color: $sec-color;
+&:hover{background-color: $main-color; color: $body-color}
+}
 }
