--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -142,22 +142,32 @@ opacity: 0.4;
 #legende , #legende-mobile{color: $body-color;}
 #subcat-mobile-index{color: $body-color}
 
-.nouveau-mobile { 
+.nouveau-mobile {
   padding: 10px 0;
 
-.project-title-mobile , #subcat-mobile-index{ 
+.project-title-mobile , #subcat-mobile-index{
 color: $new-project;}}
 
-.nouveau { 
+.nouveau {
 
 a{ text-decoration: none;color: $new-project;
 
 &:hover{ color: $body-color; -webkit-text-stroke: 1px $new-project;     -webkit-font-smoothing: antialiased;}}
-
 .subcat {color: $new-project}
-
 }
 
+.footer-desk{
+  border-top: 1px solid $body-color;
+  color: $body-color;
+.logo-footer{.cls-1{fill:$body-color;}}
+.contacts {a { color : $body-color; } }
+.newsletter{
+#email-field{color: $body-color; border-bottom: 1px solid $body-color; }}
+#submit_btn{ border:1px solid $body-color;
+color: $body-color;
+&:hover{background-color: $body-color; color: $main-color}
+}
+}
 
 
 
