--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,21 +53,30 @@
   <div class="logo-footer"><%= link_to projects_path do %> <%= inline_svg 'labaki-logo.svg' , title: t('home')%> <% end %></div>
   <div class="contacts"><%=link_to 'Instagram' , 'https://www.instagram.com/labaki_design/' , target: "_blank" %><br>  <%=link_to 'Twitter' , 'https://twitter.com/labaki_design' %>
   </div>
-  <div class="newsletter">Sign up for updates<br>
+  <div class="newsletter">Newsletter<br>
 
     <%= form_tag('/emailapi/subscribe', method: "post", id: "subscribe", remote: "true") do -%>
       <div class="email_field">
 
       <%= email_field(:email, :address, {id: "email-field", placeholder: "Your email"}) %>
       <%= submit_tag("Sign up", {id: "submit_btn"}) %>
+    </div>
+
+      <% end %>
+
+
+
+      </div>
+    <div class="copyright">&copy; 2021 Labaki Design <br> All Rights Reserved</div>
+
 </div>
-    <% end %>
 
+<script type="text/javascript">
+$('#submit_btn').click(function(){
+$("#submit_btn").val("Subscribed");
+});
 
-  </div>
-  <div class="copyright">&copy; 2021 Labaki Design <br> All Rights Reserved</div>
-
-  </div>
+</script>
 
 
   </body>
