--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -169,6 +169,21 @@ color: $body-color;
 }
 }
 
+.footer-desk-mobile{
+  border-top: 1px solid $body-color;
+  color: $body-color;
+.logo-footer{.cls-1{fill:$body-color;}}
+.contacts {
+
+p{color: $body-color}
+  a { color : $body-color; } }
+.newsletter{
+#email-field{color: $body-color; border-bottom: 1px solid $body-color; }}
+#submit_btn{ border:1px solid $body-color;
+color: $body-color;
+&:hover{background-color: $body-color; color: $main-color}
+}
+}
 
 
 
