--- a/app/assets/stylesheets/mobile.scss
+++ b/app/assets/stylesheets/mobile.scss
@@ -140,13 +140,48 @@ ul {
 
 //////spacer////
 
-.nouveau-mobile { 
+.nouveau-mobile {
   padding: 10px 0;
 
-.project-title-mobile , #subcat-mobile-index{ 
+.project-title-mobile , #subcat-mobile-index{
 color: $new-project;}
 
 
 
 }
 
+
+
+
+///////////////////////footer-
+.footer-desk-mobile{
+  border-top: 1px solid $main-color;
+  padding-top: 20px;
+  position: fixed;
+  bottom:0;
+  width: 90%;
+  margin-bottom: 50px;
+  height: auto;
+  color: $sec-color;
+  font-family: 'Kern-r' , sans-serif;
+
+.logo-footer{width: 30% ; .cls-1{fill:$main-color;}}
+.copyright{font-size: 0.8em; }
+.contacts {
+  p{font-family: 'Kern-b', sans-serif; margin-bottom: 0px;}
+  a { text-decoration: none; color : $sec-color; &:hover{text-decoration: underline;}}
+margin-bottom: 30px;
+}
+.newsletter{ justify-self:end; font-family: 'Kern-b', sans-serif; padding: 30px 0;
+.email_field{display: grid;grid-template-columns: 70% 30%;}
+#email-field{
+  font-family: 'Kern-r' , sans-serif;
+  margin-top: 10px;
+  font-size: .95em;
+  border:none; color: $sec-color; background: none; border-bottom: 1px solid $main-color; padding-bottom: 5px;}
+}
+#submit_btn{width: 90px; border:none; background: none; border:1px solid $main-color; padding:8px; margin-left: 15px;  font-family: 'Kern-b' , sans-serif;
+ font-size:.9em;color: $sec-color; justify-self:end;
+&:hover{background-color: $main-color; color: $body-color}
+}
+}
