--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,7 @@
 <p class="alert"><%= alert %></p>
 <%= yield %>
 <div class="footer-desk">
-  <div class="logo-footer"><%= link_to projects_path do %> <%= inline_svg 'labaki-logo.svg' , title: t('home')%> <% end %></div>
+  <div class="logo-footer"> <%= inline_svg 'labaki-logo.svg' %></div>
   <div class="contacts"><%=link_to 'Instagram' , 'https://www.instagram.com/labaki_design/' , target: "_blank" %><br>  <%=link_to 'Twitter' , 'https://twitter.com/labaki_design' %>
   </div>
   <div class="newsletter">Newsletter<br>
@@ -64,9 +64,7 @@
 
       <% end %>
 
-
-
-      </div>
+</div>
     <div class="copyright">&copy; 2021 Labaki Design <br> All Rights Reserved</div>
 
 </div>
