--- a/app/assets/stylesheets/mobile.scss
+++ b/app/assets/stylesheets/mobile.scss
@@ -157,8 +157,7 @@ color: $new-project;}
 .footer-desk-mobile{
   border-top: 1px solid $main-color;
   padding-top: 20px;
-  position: fixed;
-  bottom:0;
+margin-top: 500px;
   width: 90%;
   margin-bottom: 50px;
   height: auto;
