--- a/app/views/layouts/application.html+phone.erb
+++ b/app/views/layouts/application.html+phone.erb
@@ -74,7 +74,7 @@
 
 <div class="footer-desk-mobile">
   <div class="logo-footer"> <%= inline_svg 'labaki-logo.svg' %></div>
-  <div class="newsletter">Newsletter<br>
+  <div class="newsletter"><p>Newsletter</p>
 
     <%= form_tag('/emailapi/subscribe', method: "post", id: "subscribe", remote: "true") do -%>
       <div class="email_field">
