--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,7 @@
 <%= yield %>
 <div class="footer-desk">
   <div class="logo-footer"> <%= inline_svg 'labaki-logo.svg' %></div>
-  <div class="contacts"><%=link_to 'Instagram' , 'https://www.instagram.com/labaki_design/' , target: "_blank" %><br>  <%=link_to 'Twitter' , 'https://twitter.com/labaki_design' %>
+  <div class="contacts"><%=link_to 'Instagram' , 'https://www.instagram.com/labaki_design/' , target: "_blank" %><br>  <%=link_to 'Twitter' , 'https://twitter.com/labaki_design', target: "_blank" %>
   </div>
   <div class="newsletter">Newsletter<br>
 
