--- a/app/views/layouts/application.html+phone.erb
+++ b/app/views/layouts/application.html+phone.erb
@@ -81,6 +81,8 @@
 
       <%= email_field(:email, :address, {id: "email-field", placeholder: "Your email"}) %>
       <%= submit_tag("Sign up", {id: "submit_btn"}) %>
+      <div id="emailMsg"></div>
+
     </div>
 
       <% end %>
@@ -96,12 +98,64 @@
 </div>
 
 <script type="text/javascript">
-$('#submit_btn').click(function(){
-$("#submit_btn").val("Subscribed");
-});
+  $(document).ready(function(){
+  		$("#submit_btn").attr('disabled', 'disabled');
+
+      $("#email-field").keyup(function(){
+      			if(validateEmail()){
+      				// if the email is validated
+      				// set input email border green
+              $("#email-field").css("border-bottom","1px solid tan");
+
+      				// and set label
+              $("#emailMsg").html("<p class='text-success'>valid email</p>");
+
+      			}else{
+      				// if the email is not validated
+      				// set border red
+      				$("#email-field").css("border-bottom","1px solid red");
+      				$("#emailMsg").html("<p class='text-danger'>invalid email</p>");
+      			}
+      			buttonState();
+      		});
+
+          function buttonState(){
+          		if(validateEmail() ){
+          			// if the both email and password are validate
+          			// then button should show visible
+                $("#submit_btn").removeAttr("disabled")
+
+          		}else{
+          			// if both email and pasword are not validated
+          			// button state should hidden
+                $("#submit_btn").attr('disabled', 'disabled');
+          		}
+          	} //Button State
+
+            function validateEmail(){
+            		// get value of input email
+            		var email=$("#email-field").val();
+            		// use reular expression
+            		 var reg = /^\w+([-+.']\w+)*@\w+([-.]\w+)*\.\w+([-.]\w+)*$/
+            		 if(reg.test(email)){
+            		 	return true;
+            		 }else{
+            		 	return false;
+            		 }
+
+            	}
+
+
+
+
+
+    });
+
+    $( "#submit_btn" ).click(function() {
+      $( "#submit_btn" ).val("Subscribed!");
+    });
 
 </script>
-
 
 </div>
 
