--- a/app/assets/stylesheets/mobile.scss
+++ b/app/assets/stylesheets/mobile.scss
@@ -164,7 +164,7 @@ margin-top: 200px;
   height: auto;
   color: $sec-color;
   font-family: 'Kern-r' , sans-serif;
-//  p{font-family: 'Kern-b', sans-serif; margin-bottom: 0px;}
+  #subtitle-footer{font-family: "Kern-b", sans-serif;}
   .logo-footer{width: 30% ; .cls-1{fill:$main-color;}}
   .copyright{font-size: 0.8em; }
   .contacts {
@@ -173,8 +173,10 @@ margin-top: 200px;
 margin-bottom: 20px;
 }
 .newsletter{ justify-self:end; font-family: 'Kern-b', sans-serif; padding: 20px 0;
+  //  p{font-family: 'Kern-b', sans-serif; margin-bottom: 0px;}
+
 .email_field{display: grid;grid-template-columns: 70% 30%;}
-#email-field{ 
+#email-field{
   input:focus, textarea:focus, select:focus{outline: none;}
 
   font-family: 'Kern-r' , sans-serif;
