--- a/app/views/layouts/application.html+phone.erb
+++ b/app/views/layouts/application.html+phone.erb
@@ -74,7 +74,7 @@
 
 <div class="footer-desk-mobile">
   <div class="logo-footer"> <%= inline_svg 'labaki-logo.svg' %></div>
-  <div class="newsletter"><p>Newsletter</p>
+  <div class="newsletter"><p id="subtitle-footer" >Newsletter</p>
 
     <%= form_tag('/emailapi/subscribe', method: "post", id: "subscribe", remote: "true") do -%>
       <div class="email_field">
@@ -88,7 +88,7 @@
       <% end %>
 
 </div>
-  <div class="contacts"><p>Follow</p>
+  <div class="contacts"><p id="subtitle-footer">Follow</p>
 
     <%=link_to 'Instagram' , 'https://www.instagram.com/labaki_design/' , target: "_blank" %><br>  <%=link_to 'Twitter' , 'https://twitter.com/labaki_design', target: "_blank" %>
   </div>
