--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -191,12 +191,13 @@ color: $body-color;
 }
 
 
-@media only screen and (min-width: 2000px) {
+@media only screen and (min-width: 2400px) {
   /* For desktop: */
   html[data-theme="light"],   html[data-theme="dark"]{
     .main-container{width: 2000px;};
     .navigation{width: 2000px;};
     #nav-logo{width: 25%;};
-    .footer-desk{width: 2000px;};
-    .project-title {font-size: 5em;}
+    .footer-desk{width: 2000px;}
+    .project-title {font-size: 4.5em;}
+
 }};
